--- a/open-budget/app/templates/exemption-details-row.html
+++ b/open-budget/app/templates/exemption-details-row.html
@@ -1,5 +1,5 @@
 <td class='exemption-description' colspan=2><a href="<%= url %>" target="_blank"><%= description %></a></td>
-<td><%= number_with_commas(volume==null? 0 : volume)%> ש"ח</td>
+<td><%= volume == null ? 'לא ידוע' : (number_with_commas(volume==null? 0 : volume) + ' ש"ח') %></td>
 <td><%= start_date %></td>
 <td><%= end_date %></td>
 <td class='exemption-full-details-expander'>
