--- a/open-budget/app/templates/exemption-full-details.html
+++ b/open-budget/app/templates/exemption-full-details.html
@@ -15,7 +15,7 @@
     </li>
     <li>
         <h4>סכום התקשרות</h4>
-        <%= number_with_commas(volume==null? 0 : volume)%> ש"ח
+        <%= volume == null ? 'לא ידוע' : (number_with_commas(volume==null? 0 : volume) + ' ש"ח') %>
     </li>
     <li>
         <h4>סטטוס</h4>
