--- a/open-budget/app/templates/exemption-details.html
+++ b/open-budget/app/templates/exemption-details.html
@@ -1,1 +1,1 @@
-<div>*** לא הצלחנו לזהות את הרישום של הספק אצל רשם התאגידים ***</div>
+<div>*** לא הצלחנו לזהות את הרישום של הספק אצל רשות התאגידים ***</div>
